<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">MeetingManager</string>
    <string name="action_settings">Options</string>
    <string name="error_login">Impossible de se connecter</string>
    <string name="conn_error">Problème avec votre compte</string>
    <string name="server_reachability">Problème avec le serveur</string>
    <string name="buttonJoin">Démarrer/Rejoindre</string>
    <string name="buttonCreate">Consulter/Créer/Modifier</string>
    <string name="buttonLogout">Se déconnecter</string>
    <string name="nameMeeting">Nom</string>
    <string name="locationMeeting">Lieu</string>
    <string name="buttonSetDateAndTime">Ajouter une date</string>
    <string name="buttonAddParticipant">Ajouter/Supprimer des participants</string>
    <string name="buttonSave">Sauvegarder</string>
    <string name="buttonReturn">Retour</string>
    <string name="friendList">Vos sujets</string>
    <string name="buttonAddSubjets">Ajouter un sujet</string> -g
    <string name="account">Compte</string>
    <string name="firstName">Prénom</string>
    <string name="familyName">Nom</string>
    <string name="showFriends">Voir/Ajouter des amis</string>
    <string name="meeting">Reunion</string>
    <string name="addfriend">Ajouter un ami</string>
    <string name="descriptionAddFriend">Tu veux inviter un ami à ta réunion ? Ajoute son email !</string>
    <string name="noFriends">Tu n\'as pas d\'amis !</string>
    <string name="cantAddFriend">Impossible d\'ajouter cette ami</string>
    <string name="userNotExist">L\'utilisateur n\'existe pas</string>
    <string name="deleteFriend">Effacer un ami</string>
    <string name="confirmationDelete">Etes-vous sûr de vouloir effacer votre ami ?</string>
    <string name="up">↑</string>
    <string name="down">↓</string>
    <string name="friendListTitle">Vos amis</string>
    <string name="meetingListTitle">Vos réunions</string>
    <string name="createMeetingTitle">Créer votre réunion</string>
    <string name="confirmationDeleteSubjet">Etes-vous sûr de vouloir effacer ce sujet ?</string>
    <string name="deleteSubject">Effacer le sujet</string>
    <string name="duration">Durée :</string>
    <string name="subjetInfo">Description</string>
    <string name="meetingCreated">Réunion ajoutée</string>
    <string name="deleteMeeting">Effacer la réunion</string>
    <string name="confirmationDeleteMeeting">Etes-vous sûr de vouloir effacer cette réunion ?</string>
    <string name="startMeeting">Démarrer une réunion</string>
    <string name="presence">Les Présences</string>
    <string name="editMeeting">Modifier la réunion</string>
    <string name="next">Suivant</string>
    <string name="timeLeft">Temps restant : </string>
    <string name="startMeetingCom">Démarrer la réunion</string>
    <string name="startingMeeting">Voulez vous démarrer la réunion?</string>
    <string name="startM">Démarrer</string>
    <string name="endMeeting">Terminer</string>
    <string name="leaveMeeting">Quitter la réunion ?</string>
    <string name="leaveMeetingCon">Voulez vous quitter la réunion ?</string>
    <string name="speedup">Accélérer !</string>
    <string name="fiveminSet">"Voulez vous régler le minuteur a "</string>
    <string name="endofMeeting">Fin de la réunion</string>
    <string name="endofmeetingCon">Voulez vous terminer la réunion ?</string>
    <string name="editMeetingTitle">Modifier votre réunion !</string>
    <string name="meetingUpdate">Réunion mise à jour</string>
    <string name="friendsRemoved">supprimé</string>
    <string name="addfriendToast">ajouté</string>
    <string name="welcome">Bienvenue</string>
    <string name="goodbye">A bientôt !</string>
    <string name="nameUpdate">Modifications enregistrées</string>
    <string name="dontExist">n\'existe pas ou est déja votre ami</string>
    <string name="noMeetings">Tu n\'as aucune réunions</string>
    <string name="nameMeetingError">Vous devez introduire un nom pour la réunion!</string>
    <string name="locationMeetingError">Vous devez introduire un emplacement pour la réunion!</string>
    <string name="pickDate">Vous devez choisir une date!</string>
    <string name="oneSubj">Vous devez ajouter au moins un sujet!</string>
    <string name="nameSubError">Vous devez fournir un nom pour votre sujet!</string>
    <string name="oneFriendError">Vous devez séléctionner au moins un ami!</string>
    <string name="noFriendsOption">Tu n\'as pas d\'amis ! Va dans les options pour en rajouter !</string>
    <string name="meetingEdited">Meeting edited!</string>
    <string name="joinMeet">Rejoindre la réunion</string>
    <string name="joinMeetingCom">Voulez vous rejoindre la réunion?</string>
    <string name="masterLeave">Le maitre est parti !</string>
    <string name="meetingEnd">La réunion est terminé</string>
    <string name="dontforget">N\'oublie pas que tu dois assister a la réunion</string>
    <string name="delayTextAlert">Alerte</string>
    <string name="notifDelay">Envoyer une notification avant qu\'une réunion commence de</string>
    <string name="minutes">Minutes</string>
    <string name="hours">Heures</string>
    <string name="days">Jours</string>
    <string name="participants">Les participants</string>
    <string name="vpn">Vous devez vous connecter sur le VPN de l\'UMONS</string>
    <string name="presenceButton">Présence complète</string>
    <string name="sendAlert">Envoyer une notification</string>
    <string name="commme">Un notification demandant la présence des participants a été envoyée</string>
    <string name="server_client_id">251985880134-s50kcnrr15ci8cvpeiuo4jhfir2sjrq3.apps.googleusercontent.com</string>
    <string name="accountID">account</string>
    <string name="accountToken">accountToken</string>
    <string name="add_friend_url">https://sith-meetings.umons.ac.be:8080/addFriend</string>
    <string name="buttonOption">Options</string>
    <string name="connexion">Connexion...</string>
    <string name="create_meeting_url">https://sith-meetings.umons.ac.be:8080/createMeeting</string>
    <string name="dateAndTimeText">00-00-00 / 00:00</string>
    <string name="email">Email</string>
    <string name="getFriends">https://sith-meetings.umons.ac.be:8080/getFriends</string>
    <string name="get_meeting_list_url">https://sith-meetings.umons.ac.be:8080/meetingList</string>
    <string name="get_meeting_url">https://sith-meetings.umons.ac.be:8080/getMeeting</string>
    <string name="login_url">https://sith-meetings.umons.ac.be:8080/login</string>
    <string name="meeting_info_url">https://sith-meetings.umons.ac.be:8080/sendMeetingInfo</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="nextSubjet">Go To the next Subject</string>
    <string name="remove_friend_url">https://sith-meetings.umons.ac.be:8080/removeFriend</string>
    <string name="remove_meeting_url">https://sith-meetings.umons.ac.be:8080/removeMeeting</string>
    <string name="send_noti_alert_url">https://sith-meetings.umons.ac.be:8080/sendNotificationToCome</string>
    <string name="send_noti_sub_url">https://sith-meetings.umons.ac.be:8080/sendNotificationSuject</string>
    <string name="send_noti_url">https://sith-meetings.umons.ac.be:8080/sendNotification</string>
    <string name="setting">setting</string>
    <string name="test">couycou</string>
    <string name="title_activity_add_subjets">AddSubjetsActivity</string>
    <string name="title_activity_main_menu">MainMenuActivity</string>
    <string name="title_activity_meeting_manager">MeetingManagerActivity</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="tokenFire">SeeAddFriendsActivity</string>
    <string name="updateOption">https://sith-meetings.umons.ac.be:8080/updateName</string>
    <string name="update_meeting_url">https://sith-meetings.umons.ac.be:8080/updateMeeting</string>
    <string name="title_activity_see_add_friends">ActivitySeeAddFriends</string>
    <string name="search_bar">Search</string>
    <string name="notif_Subject">Envoyer une notification avant le début d\'un sujet de</string>
    <string name="minute">Minutes</string>
    <string name="accept_friend_url">https://sith-meetings.umons.ac.be:8080/acceptFriend</string>
    <string name="friendAccepted">Ajouté</string>
    <string name="sendSMSOption">Envoyer un SMS pour notifier</string>
    <string name="phoneNum">Numéro de téléphone</string>
</resources>